Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21112

Crash when using a fallback font

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • GUI: Text handling
    • None
    • Linux
    • 22011ece4c48ddd7887d7527d558dfb95fd9ceb7

    Description

      Crash in in QTextLine::glyphRuns():
      ASSERT: "at < engines.size()" in file ../../include/QtGui/5.0.0/QtGui/private/../../../../../src/gui/text/qfontengine_p.h, line 435

      To reproduce, just have a QML Text item with a Chinese character and use a font that doesn't have Chinese glyphs.

      Edit: it happens only when using the threaded renderer

      Attachments

        For Gerrit Dashboard: QTBUG-21112
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            ylopes Yoann Lopes
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes